# RepoViewer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  app_error.rs  clipboard.rs  main.rs  ui.rs  update.rs  utils.rs
src/app/: collection.rs  export.rs  mod.rs  navigation.rs  state.rs
