[package]
name = "RepoViewer"
version = "1.0.0"
edition = "2024"
authors = ["Seth Linares <sethlinares1@gmail.com>"]
description = "A TUI file explorer for generating directory trees for LLMs"
license = "MIT"

[dependencies]
clap = {version = "4.5.39", features = ["derive"]}
crossterm = "0.29.0"
dirs = "6.0.0"
git2 = "0.20.2"
ignore = "0.4.23"
ratatui = "0.29.0"
serde = "1.0.219"
thiserror = "2.0.12"
tui-input = "0.12.1"

# Optional clipboard support
arboard = { version = "3.5.0", optional = true }


[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]

[[bin]]
name = "RepoViewer"
path = "src/main.rs"
